# hands-on-rl

./: .gitignore  README.md
01_taxi/: README.md  requirements.txt
01_taxi/notebooks/: 00_environment.ipynb  01_random_agent_baseline.ipynb  01b_rule_based_agent_baseline.ipynb  02_q_agent.ipynb  03_q_agent_hyperparameters_analysis.ipynb  04_homework.ipynb
01_taxi/src/: loops.py  q_agent.py  random_agent.py
02_mountain_car/: README.md  pyproject.toml
02_mountain_car/notebooks/: 00_environment.ipynb  01_random_agent_baseline.ipynb  02_sarsa_agent.ipynb  03_momentum_agent_baseline.ipynb  04_homework.ipynb
02_mountain_car/src/: base_agent.py  loops.py  momentum_agent.py  random_agent.py  sarsa_agent.py  viz.py
03_cart_pole/: README.md  pyproject.toml  requirements.txt
03_cart_pole/notebooks/: 00_environment.ipynb  01_random_agent_baseline.ipynb  02_linear_q_agent_bad_hyperparameters.ipynb  03_linear_q_agent_good_hyperparameters.ipynb  04_homework.ipynb  05_crash_course_on_neural_nets.ipynb  06_deep_q_agent_bad_hyperparameters.ipynb  07_deep_q_agent_good_hyperparameters.ipynb  08_homework.ipynb  09_hyperparameter_search.ipynb  10_homework.ipynb  11_hyperparameter_search_in_google_colab.ipynb
03_cart_pole/src/: agent_memory.py  loops.py  optimize_hyperparameters.py  q_agent.py  random_agent.py  supervised_ml.py  utils.py  viz.py
04_lunar_lander/: README.md  pyproject.toml  requirements.txt
04_lunar_lander/notebooks/: 01_random_agent_baseline.ipynb  02_vanilla_policy_gradient_with_rewards_as_weights.ipynb  03_vanilla_policy_gradient_with_rewards_to_go_as_weights.ipynb  04_homework.ipynb
04_lunar_lander/src/: evaluation.py  utils.py  viz.py  vpg_agent.py
