[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pau <plabartabajo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gymnasium = "^0.28.0"
pyglet = "^2.0.18"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
pandas = "^2.2.3"
jupyter = "^1.1.1"
pyvirtualdisplay = "^3.0"
imageio = "^2.35.1"
seaborn = "^0.13.2"
pygame = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
