[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pau <plabartabajo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gymnasium = "^0.28.0"
pyglet = "^2.0.18"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
pandas = "^2.2.3"
jupyter = "^1.1.1"
pyvirtualdisplay = "^3.0"
imageio = "^2.35.1"
seaborn = "^0.13.2"
pygame = "^2.6.1"
scikit-learn = "^1.5.2"
torch = "^2.4.1"
tensorboard = "^2.18.0"
pyyaml = "^6.0.2"
mlflow = "^2.16.2"
gdown = "^5.2.0"
optuna = "^4.0.0"
pyngrok = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
certifi = "^2024.8.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
